--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 
 # production
 /build
+dist/
+
 
 # misc
 .DS_Store
@@ -21,3 +23,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+dist/App.js
+dist/components/Footer.js
+dist/components/Header.js
+dist/components/Sidebar.js
+dist/context/AuthContext.js
+dist/pages/Home.js
+dist/pages/Login.js
+dist/pages/Products.js
